fix: scrollbar margin

--- a/src/pages/feed.module.css
+++ b/src/pages/feed.module.css
@@ -12,7 +12,7 @@
 .content{
     display: flex;
     flex-direction: row;
-    gap: 60px;
+    justify-content: space-between;
 }
 
 .orders{
@@ -23,6 +23,7 @@
     gap: 16px;
     max-height: 768px;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .order{
@@ -30,11 +31,12 @@
     flex-direction: column;
     width: 584px;
     gap: 24px;
-    margin: 0;
+    margin: 0 8px 0 0;
     padding: 24px 24px;
     background: #1C1C21;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 2px rgba(0, 0, 0, 0.06), 0px 0px 1px rgba(0, 0, 0, 0.04);
     border-radius: 40px;
+    box-sizing: border-box;
 }
 
 .orderid{
